# ome-cpp-training

./: autotools.dot  bioformats-cpp-paris.tex  cmake-flow.fodg  cmake.dot  common.tex  cpp-cmake.tex  cpp-dundee-2016.tex  cpp-dundee-2017.tex  cpp-java-differences.tex  cpp-ndim.tex  cpp-setup-unused.tex  cpp-setup.tex  cpp.tex  git-basics.tex  git-plumbing.sh  zfs-demo.tex
cmake-examples/control/: CMakeLists.txt
cmake-examples/feature/: CMakeLists.txt
cmake-examples/feature2/: CMakeLists.txt
cmake-examples/feature3/: CMakeLists.txt
cmake-examples/install/: CMakeLists.txt  main.cpp
cmake-examples/options/: CMakeLists.txt
cmake-examples/program/: CMakeLists.txt  test.cpp
cmake-examples/unit/: CMakeLists.txt  test.cpp
git-samples/new/: CMakeLists.txt  info.cpp  options.h
